# stamon

./: .clang-format  .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  MOSPP  Makefile  README.md  a.stvc  xmake.lua
.github/workflows/: cmake-multi-platform.yml  makefile.yml
demos/: demo.st  demo.stvc  demo1.st  demo1.stvc  demo2.st  demo2.stvc
doc/: AST-IR编码文件文档.md  AstRunner开发文档.md  CITP设计文档.md  SFN机制文档.md  STVC-TAC中间代码规范.md  STVC-TAC二进制编码规范.md  Stamon异常信息修复指南.md  Stamon错误及警告信息修复指南.md  【过时】调试指南.md  代码速览指南.md  依赖库开发指导.md  分步行动机制文档.md  发行版使用指南.md  发行版编译指南.md  对象管理器文档.md  工作日志后记集.md  抽象语法树文件编码文档.md  移植接口开发指导.md  编译发行版指南.md  编译器开发文档.md  词法分析器文档.md  词法单元文件编码文档.md  语法分析器文档.md  调试指南.md
doc/工作日志/: 20230727.md  20230812.md  20230825.md  20230916.md  20231202.md  20240131.md  20240207.md  20240510.md  20240519.md  20240616.md  20240626.md  20240707.md  20240712.md  20240714.md  20240715.md  20240727.md  20240730.md  20240801.md  20240821.md  20240908.md  20241004.md  20241029.md  20241202.md  20250127.md  20250222.md  20250228.md  20250302.md  20250303.md  20250308.md  20250318.md  20250322.md  20250328.md  20250402.md  20250404.md  20250406.md  20250412.md  20250423.md  20250525.md  20250606.md  20250607.md  (+13 more)
example/: Makefile  example.sh  main.st  test.st
history/: Compiler.hpp  README.md  binary_operator_loop.cpp  debug.stvc  left_value.cpp  parser_test.cpp  time.bat
history/code_generator/: code.cpp  generator.py  setting.json
include/ArrayList/interface/: IArrayList.hpp
include/ArrayList/stdc/: ArrayList.hpp
include/ArrayList/stdcpp/: ArrayList.hpp
include/BasicIo/interface/: IBasicIo.hpp
include/BasicIo/stdc/: BasicIo.hpp
include/BasicIo/stdcpp/: BasicIo.hpp
include/BasicPlatform/interface/: IBasicPlatform.hpp
include/BasicPlatform/stdc/: BasicPlatform.hpp
include/BasicPlatform/stdcpp/: BasicPlatform.hpp
include/EasySmartPtr/interface/: IEasySmartPtr.hpp
include/EasySmartPtr/stdc/: EasySmartPtr.hpp
include/EasySmartPtr/stdcpp/: EasySmartPtr.hpp
include/FileReader/interface/: IFileReader.hpp
include/FileReader/stdc/: FileReader.hpp
include/FileReader/stdcpp/: FileReader.hpp
include/FileWriter/interface/: IFileWriter.hpp
include/FileWriter/stdc/: FileWriter.hpp
include/FileWriter/stdcpp/: FileWriter.hpp
include/HashMap/interface/: IHashMap.hpp
include/HashMap/stdc/: HashMap.hpp
include/HashMap/stdcpp/: HashMap.hpp
include/MemoryPool/interface/: IMemoryPool.hpp
include/MemoryPool/stdc/: MemoryPool.hpp
include/SmartPtr/interface/: ISmartPtr.hpp
include/SmartPtr/stdc/: SmartPtr.hpp
include/SmartPtr/stdcpp/: SmartPtr.hpp
include/Stack/interface/: IStack.hpp
include/Stack/stdc/: Stack.hpp
include/Stack/stdcpp/: Stack.hpp
include/String/interface/: IString.hpp
include/String/stdc/: String.hpp
include/String/stdcpp/: String.hpp
include/interface/: Exception.hpp  IBasicIo.hpp  IBasicPlatform.hpp  IEasySmartPtr.hpp  IFileReader.hpp  IFileWriter.hpp  IHashMap.hpp  IMemoryPool.hpp  IStack.hpp  IString.hpp  StamonLib.hpp
include/pure/: Exception.hpp  StamonLib.hpp
include/stdc_implemented/: ArrayList.hpp  BasicIo.hpp  BasicPlatform.hpp  BinaryReader.hpp  BinaryWriter.hpp  ByteMap.hpp  EasySmartPtr.hpp  Exception.hpp  FileMap.hpp  FileReader.hpp  FileWriter.hpp  HashMap.hpp  LineReader.hpp  MemoryPool.hpp  NumberMap.hpp  SmartStrie.hpp  Stack.hpp  String.hpp  StringMap.hpp  TypeDef.hpp  stack.h  stmlib.hpp  strie.h
include/template/: ArrayList.hpp  BinaryReader.hpp  BinaryWriter.hpp  ByteMap.hpp  EasySmartPtr.hpp  Exception.hpp  FileMap.hpp  LineReader.hpp  MemoryPool.hpp  NumberMap.hpp  Stack.hpp  String.hpp  StringMap.hpp  TypeDef.hpp  stmlib.hpp
include/usetool/: byte_get.hpp  exp.hpp
src/: Main.cpp  Stamon.hpp
src/action/: AstFileReader.cpp  AstFileWriter.cpp  AstIrReader.cpp  AstIrWriter.cpp  BufferStream.cpp  ConstTabReader.cpp  ConstTabWriter.cpp  IOStream.cpp  TokenFileReader.cpp  TokenFileWriter.cpp
src/ast/: Ast.hpp  CodeLogicAst.cpp  ExprAst.cpp  LeafAst.cpp  SfnAst.cpp
src/bin-include/: math.st  stddef.st  stdio.st  string.st  system.st
src/compiler/: Compiler.hpp  Lexer.cpp  Parser.cpp  ParsingQueue.cpp  Preprocessor.cpp  Token.cpp  ebnf.txt
src/config/: CompilerConfig.hpp  StamonConfig.hpp  VmConfig.hpp
src/data_type/: ClassType.cpp  DataType.hpp  MethodType.cpp  NullType.cpp  NumberType.cpp  ObjectType.cpp  SequenceType.cpp  StringType.cpp  Variable.cpp
src/error/: AstRunnerExceptionMessage.cpp  CompilerExceptionMessage.cpp
src/exception/: AstFileReaderException.cpp  AstIrException.cpp  AstIrReaderException.cpp  AstRunnerException.cpp  BufferStreamException.cpp  CompilerException.cpp  ConstTabReaderException.cpp  ObjectManagerException.cpp  SFNException.cpp  TokenFileReaderException.cpp
src/exception/codegen/: astfilereader.json  astir.json  astirreader.json  astrunner.json  bufferstream.json  codegen.py  compiler.json  consttabreader.json  objectmanager.json  sfn.json  tokenfilereader.json
src/ir/: AstIR.cpp  AstIr.cpp  STVCReader.cpp  STVCWriter.cpp
src/sfn/: SFN.cpp
src/vm/: AstRunner.cpp  ObjectManager.cpp  TypeCalculator.cpp
test/: test.cpp
test/lexer/: test.cpp
test/parser/: test.cpp
test_case/lexer/: test.cpp
